@@ -1,12 +1,14 @@
 Next release:
+mod: "genet exec" now prints the list of instanciated chains on stdout,
+     and execution report on stderr
 add: display creation date in version list
 add: "out files" tab now contains a form to display diffs between two selected
      instanciation chains
-add: genet exec --force option: remove previously instanciated chain to
+add: "genet exec" --force option: remove previously instanciated chain to
      re-execute. Useful in manual mode, when setting up interfaces.
 fix: verify syntactic correctness of filetype names before adding
 fix: various error handling
-mod: genet init-dir now creates a default configuration file in the
+mod: "genet init-dir" now creates a default configuration file in the
      given project directory; update doc accordingly
 mod: when an interface takes a directory in output parameter, the
      directory is created before calling the interface
